Firefox dark mode header color fixed

--- a/css/var.css
+++ b/css/var.css
@@ -29,7 +29,14 @@
     --incode-border: #00000033;
     --p-link-hover-bg: linear-gradient(90deg, #b549f833 40%, #246bf733);
 }
-
+@-moz-document url-prefix(){
+    /*Because firefox does not support backdrop filter 😒 */
+    :root {
+        --header-bg: #ffffff;
+        --bg-moreOptions-div: #ffffff;
+        --blur: blur(0px);
+    }
+}
 /* Dark mode */
 @media (prefers-color-scheme: dark) {
     :root {
@@ -55,14 +62,13 @@
         --incode-border: #ffffff44;
         --p-link-hover-bg: linear-gradient(90deg, #d28affaa 40%, #6f9fffaa);
     }
-}
-
-
-@-moz-document url-prefix(){
-    /*Because firefox does not support backdrop filter 😒 */
-    :root {
-        --header-bg: #ffffff;
-        --bg-moreOptions-div: #ffffff;
-        --blur: blur(0px);
+    @-moz-document url-prefix(){
+        /*Because firefox does not support backdrop filter 😒 */
+        :root {
+            --header-bg: #000015;
+            --bg-moreOptions-div: #000010;
+        }
     }
 }
+
+
